[package]
name = "adc"
version = "0.1.0"
authors = ["Felix Seele <fseele@gmail.com>"]
license = "MIT"
repository = "https://github.com/citruz/adc-rs"
readme = "README.md"
keywords = ["apple", "data", "compression"]
categories = ["compression"]
description = """
Rust implementation of the Apple Data Compression scheme used in DMG images.
"""
edition = "2018"

[dependencies]
bincode = "1.3.1"
