[package]
name = "adc"
version = "0.2.1"
authors = ["Felix Seele <fseele@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/citruz/adc-rs"
readme = "README.md"
keywords = ["apple", "data", "compression"]
categories = ["compression"]
description = """
Rust implementation of the Apple Data Compression scheme used in DMG images.
"""

[dependencies]
byteorder = "1"
